<resources>
    <string name="app_name">Sangallae</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="str_kakao_login">kakao Login</string>
    <string name="str_google_login">Google Sign in</string>
    <string name="main_back">Press the button again to close the app.</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Type here to search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="str_course_time">Time</string>
    <string name="str_course_height">Height</string>
    <string name="str_difficulty_high">hard</string>
    <string name="str_difficulty_medium">medium</string>
    <string name="str_difficulty_easy">easy</string>
    <string name="str_course_distance">Distance</string>
    <string name="logout">logout</string>
    <string name="profile_name">\'s profile</string>
    <string name="profile_course_record">My Course Records</string>
    <string name="profile_course_view">Course Records  ></string>
    <string name="profile_stat">Stats</string>
    <string name="profile_total_distance">Total Distance</string>
    <string name="profile_avg_distance">Average Distance</string>
    <string name="profile_total_time">Total Time</string>
    <string name="profile_avg_time">Average Time</string>
    <string name="profile_max_time">Max Time</string>
    <string name="profile_height">Total Height</string>
    <string name="profile_max_height">Max Height</string>
    <string name="profile_avg_height">Average Height</string>
    <string name="profile_max_speed">Max Speed</string>
    <string name="profile_avg_speed">Average Speed</string>
    <string name="profile_total_calories">Total Calories</string>
    <string name="profile_avg_calories">Average Calories</string>
    <string name="profile_max_distance">Max Distance</string>
    <string name="profile_total_moving_time">Total Moving Time</string>
    <string name="profile_avg_moving_time">Average Moving Time</string>
    <string name="profile_max_moving_time">Max Moving Time</string>
    <string name="profile_max_pace">Max Pace</string>
    <string name="profile_avg_pace">Average Pace</string>
    <string name="total_uphill">Total Uphill</string>
    <string name="avg_uphill">Average Uphill</string>
    <string name="max_uphill">Max Uphill</string>
    <string name="total_downhill">Total Downhill</string>
    <string name="avg_downhill">Average Downhill</string>
    <string name="max_downhill">Max Downhill</string>

    <string name="str_report">Report</string>
    <string name="str_download">Download</string>
    <string name="str_follow">Follow</string>
    <string name="detail_course">Course Details</string>
    <string name="detail_loaction">Location</string>
    <string name="detail_distance">Distance</string>
    <string name="detail_total_time">Total Time</string>
    <string name="detail_avg_speed">Average Speed</string>
    <string name="detail_max_heigh">Max Elevation</string>
    <string name="detail_difficulty">Difficulty</string>
    <string name="detail_date">Record Date</string>

    <string name="profile_edit">Edit Profile</string>
    <string name="profile_edit_nickname">Nickname</string>
    <string name="profile_edit_height">Height</string>
    <string name="profile_edit_weight">Weight</string>
    <string name="profile_edit_ok">OK</string>
    <string name="profile_edit_cancel">Cancel</string>
    <string name="detail_moving_time">Moving Time</string>
    <string name="detail_avg_pace">Average Pace</string>
    <string name="detail_min_height">Min Elevation</string>
    <string name="ele_dif">Elevation Diff</string>
    <string name="detail_uphill">Uphill</string>
    <string name="detail_downhill">Downhill</string>
    <string name="str_my_record">My Records</string>
    <string name="str_more">More > </string>

    <string name="greeting1">, Nice to meet you!</string>
    <string name="greeting2">Find the course that suits you</string>
    <string name="mycourse">Courses that suit you</string>
    <string name="popular">Hot Courses</string>
    <string name="popMtn">Hot Mountains</string>
    <string name="near">Nearby Mountains</string>
    <string name="recCourseList">Recommended Course List</string>
    <string name="hotCourseList">Hot Course List</string>
    <string name="hotMountainList">Hot Mountain List</string>

    <string name="str_no_favorites">There is no list of courses.</string>

    <string name="location">Location</string>
    <string name="course_detail">Course Detail</string>
    <string name="total_time">Total time</string>
    <string name="moving_time">Moving time</string>
    <string name="moving_distance">Moving distance</string>
    <string name="left_distance">Left distance</string>
    <string name="cur_height">Current height</string>
    <string name="arrival_time">Expected arrival time</string>
    <string name="rest_time">Rest time</string>
    <string name="calories">Used Calories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_records">My Records</string>
    <string name="no_near_mountain">Sorry, couldn\'t find nearby mountains</string>
</resources>